# thought-graph

./: .gitignore  Cargo.toml  README.md  package.json
mcp-server/src/: main.rs  tools.rs
scripts/: build-dmg.sh  bump-version.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  db.rs  graph.rs  lib.rs  main.rs
tests/: test.gv
web-py/: run.bat  run.sh  server.py
web-server/: Cargo.toml
web-server/src/: main.rs
web-src/: index.html  main.js
